@@ -1,3 +1,7 @@
+Wed Nov  7 09:15:58 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* object.c (rb_mod_const_get): avoid inadvertent symbol creation.
+
 Wed Nov  7 07:52:50 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* enum.c (rb_enum_cycle_size): prefix with rb.
